Add support for multiple paths in templates and update UI accordingly

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -11,6 +11,9 @@
 	"addProperty": {
 		"message": "+ Add property"
 	},
+	"addPath": {
+		"message": "+ Add path"
+	},
 	"addProvider": {
 		"message": "+ Add provider"
 	},
